--- a/src/main/resources/templates/general/change-password.html
+++ b/src/main/resources/templates/general/change-password.html
@@ -12,8 +12,8 @@
     <header th:if="${flagRoleAdmin}" th:insert="blocks/headers::header-admin-page"/>
     <header th:unless="${flagRoleAdmin}" th:insert="blocks/headers::header-user-page"/>
 
-    <div class="container mt-5 mb-5 text-center">
-        <h1 style="margin: 10px;">Изменение пароля</h1>
+    <div class="container mt-4 text-center">
+        <h2 style="margin: 10px;">Изменение пароля</h2><br>
         
         <form th:action="${flagRoleAdmin} ? @{/adminpage/profile/changepassword} : @{/profile/changepassword}" method="post" style="display: inline-block; width: 30rem;">
             <div class="form-group row">
@@ -24,8 +24,7 @@
             </div>
 
             <div th:if="${errorLastPassword}" style="color: red">
-                Старый пароль введен неверно!
-                <br><br>
+                Старый пароль введен неверно!<br><br>
             </div> 
 
             <div class="form-group row">
@@ -37,25 +36,17 @@
             </div> 
 
             <div th:if="${errorNewPassword}" style="color: red">
-                Введенные пароли не совпадают!
-                <br><br>
+                Введенные пароли не совпадают!<br><br>
             </div> 
-
             <div th:if="${errorSuitablePassword}" style="color: red">
-                Новый пароль должен состоять минимум из 8 символов и содержать хотя бы одну цифру, заглавную и строчную латинскую букву.
-                <br><br>
+                Новый пароль должен состоять минимум из 8 символов и содержать хотя бы одну цифру, заглавную и строчную латинские буквы.<br>
             </div> 
 
-            <button type="submit" class="btn btn-primary w-30 py-2">Изменить пароль</button>
-
-            <a th:if="${flagRoleAdmin}" href="/adminpage/profile" class="btn btn-secondary">Отмена</a>
-            <a th:unless="${flagRoleAdmin}" href="/profile" class="btn btn-secondary">Отмена</a>
-
+            <br><button type="submit" class="btn btn-success" style="width: 160px;">Изменить пароль</button><br><br>
+            <a th:href="${flagRoleAdmin} ? '/adminpage/profile' : '/profile'" class="btn btn-secondary" style="width: 160px;">Отмена</a>
         </form>
-    </div>
 
-    <div th:insert="blocks/footer :: footer"></div>
-    
+    </div>
 </body>
 
 <style>
