--- a/src/main/resources/templates/blocks/headers.html
+++ b/src/main/resources/templates/blocks/headers.html
@@ -1,10 +1,7 @@
 <div th:fragment="header-simple">
 
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-nornal">Главная страница</h5>
-        <nav class="my-2 my-md-0 mr-md-3">
-          <a href="/login" class="btn btn-primary">Вход</a>
-        </nav>
+    <div class="p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+        <h5 class="my-0 font-weight-nornal text-center">Web-приложение для оценки динамики посттравматического стрессового расстройства в процессе лечения</h5>
     </div>
 
 </div>
