--- a/src/main/resources/templates/user/questionnaires/TOP8.html
+++ b/src/main/resources/templates/user/questionnaires/TOP8.html
@@ -11,22 +11,19 @@
 
     <header th:insert="blocks/headers :: header-user-page"></header>
 
-    <div class="container mt-5">
-        <h1 class="text-center"> Опросник TOP-8 </h1>
+    <div class="container mt-4">
+        <h2 class="text-center"> Опросник TOP-8 </h2>
 
         <form th:action="@{/questionnaires/{name}(name='TOP8')}" th:object="${answers}" method="post">
 
             <div th:each="question, iter1 : ${questions}">
                 <p th:text="${iter1.count} + '. ' + ${question}"/>
-                
                 <div>
                     <div th:each="answerOption, iter2 : ${answerOptions[iter1.index]}">
                     <input type="radio" th:id="${iter2.index}" th:field="*{answers[__${iter1.index}__]}" th:value="${iter2.index}" required/>
                     <label th:for="${iter2.index}" th:text="${answerOption}"/>
                     </div>
-                </div>
-                
-                <br>
+                </div><br>
             </div> 
 
             <button type="submit" class="btn btn-dark">Сохранить</button>
